# stochas

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE.txt  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: workflow.yml
assets/distributions/: gen_distribution_figures.py
css/: extra.css
docs/: hooks.py  index.md
docs/assets/distributions/: gen_distribution_figures.py
docs/assets/example_tables/initial_conditions/: uniform.csv  uniform.md
docs/assets/example_tables/link_properties/: normal.csv  normal.md  truncated_normal.csv  truncated_normal.md
docs/css/: extra.css
docs/user-guides/: design-values.md  design_values.py  distributions.md  distributions.py  named-values.md  named_values.py  orchestration.md  orchestration.py  unit-system.md  unit_system.py
reference/SUMMARY/: index.html
reference/process_manager/: index.html
reference/process_manager/distribution/: index.html
reference/process_manager/mixins/: index.html
reference/process_manager/named_value/: index.html
reference/stochas/: index.html
reference/stochas/base/: index.html
reference/stochas/base_collections/: index.html
reference/stochas/design_variable/: index.html
reference/stochas/distribution/: index.html
reference/stochas/mixins/: index.html
reference/stochas/named_value/: index.html
reference/stochas/utils/: index.html
scripts/: gen_ref_pages.py
search/: search_index.json
site/: 404.html  objects.inv
site/reference/process_manager/: index.html
site/reference/process_manager/base_collections/: index.html
site/reference/process_manager/distribution/: index.html
site/reference/process_manager/named_value/: index.html
site/search/: search_index.json
site/user-guides/named-values/: index.html
src/process_manager/: __init__.py  base_collections.py  distribution.py  mixins.py  named_value.py
src/process_manager.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/stochas/: __init__.py  base.py  base_collections.py  design_variable.py  distribution.py  mixins.py  named_value.py  unit_system.py  utils.py
src/stochas/distribution/: __init__.py  _base.py  _continuous.py  _discrete.py
tests/: unit_system_test.py
tests/data_handlers/: design_variable_test.py  mixins_test.py  named_value_collection_test.py  named_value_test.py  stochas_base_test.py  stochas_utils_test.py
tests/data_handlers/distributions/: base_test.py  continuous_test.py  discrete_test.py  discrete_uniform_test.py
user-guides/: named_values.py
user-guides/design-values/: index.html
user-guides/distributions/: index.html
user-guides/named-values/: index.html
user-guides/orchestration/: index.html
