[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stochas"
version = "1.0.4"
description = "stochas is a Python framework built to handle the complexity of Monte Carlo simulations, parametric studies, and probabilistic modeling."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.2",
    "numpydantic>=1.7.0",
    "pydantic>=2.12.5",
    "scipy>=1.17.0",
]


classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
authors = [{ name = "David Gable", email = "dave.a.gable@gmail.com" }]
maintainers = [{ name = "David Gable", email = "dave.a.gable@gmail.com" }]
license = { text = "Apache-2.0" }


[tool.ruff]
exclude = ["typings", "scripts/templating/sensor_template.py"]

[tool.ruff.lint]
select = ["D", "RUF", "E", "F", "W", "UP"] # some suggest using "ALL"

ignore = [
    # modules
    "ANN", # flake8-annotations
    "COM", # flake8-commas
    "C90", # mccabe complexity
    "DJ",  # django
    "EXE", # flake8-executable
    "T10", # debugger
    "TID", # flake8-tidy-imports

    # specific rules
    "D100",   # ignore missing docs
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D200",
    "D203",
    "D205",
    "D212",
    "D400",
    "D401",
    "D404",
    "D415",
    "E402",   # false positives for local imports
    "E501",   # line too long
    "TRY003", # external messages in exceptions are too verbose
    "TD002",
    "TD003",
    "FIX002", # too verbose descriptions of todos
]

[tool.pyright]
stubPath = "typings"
venvPath = ".."
venv = ".venv"
ignore = ["typings"]

[dependency-groups]
dev = [
    "callouts>=0.1.1",
    "matplotlib>=3.10.8",
    "mkdocs>=1.6.1",
    "mkdocs-gen-files>=0.6.0",
    "mkdocs-glightbox>=0.5.2",
    "mkdocs-literate-nav>=0.6.2",
    "mkdocs-material>=9.7.1",
    "mkdocs-open-in-new-tab>=1.0.8",
    "mkdocs-section-index>=0.3.10",
    "mkdocstrings[python]>=1.0.3",
    "pyright[nodejs]>=1.1.408",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.0",
    "scipy-stubs>=1.17.0.2",
    "tabulate>=0.9.0",
]

[project.urls]
Homepage = "https://github.com/Hydrowelder/stochas"
Documentation = "https://hydrowelder.github.io/stochas/"
Repository = "https://github.com/Hydrowelder/stochas"
Issues = "https://github.com/Hydrowelder/stochas/issues"
Discussions = "https://github.com/Hydrowelder/stochas/discussions"
